--- a/package.json
+++ b/package.json
@@ -18,19 +18,16 @@
   "bugs": "",
   "keywords": [],
   "author": {
-    "name": "Tiven Pangtono",
-    "email": "tpangtono@umass.edu"
+    "name": "",
+    "email": "",
+    "url": ""
   },
-
-"scripts": {
-"start": "http-server src/frontend -p 3000 -c-1 -o -s"
-}, 
   "contributors": [],
   "scripts": {
     "dev": "",
     "test": ""
   },
-  "devDependencies": {
-    "http-server": "^14.1.1"
+  "dependencies": {
+    "express": "^4.19.2"
   }
 }
